--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              <div class="mais-card">
                 <img src="./img/inspira.jpg" alt="Projetos 1" class="mais-imagem">
                 <h3 class="info-mais">Inspiração</h3>
-                <p class="paragrafo-mais">minhas maior inspiraçào com certeza vem da minha mãe, Flávia Brito. Saber de sua história e ver de perto sua evolução e sucesso me faz almejar tamanha garra e determinação. Vendo o seu lado de empresária eu vejo a transformação que ela faz na vida de muitas empresas, mas em principal ela transforma pessoas. Espero um dia impactar tantos e tantas assim como ela.</p>
+                <p class="paragrafo-mais">Minha maior inspiração com certeza vem da minha mãe, Flávia Brito. Saber de sua história e ver de perto sua evolução e sucesso me faz almejar tamanha garra e determinação. Vendo o seu lado de empresária eu vejo a transformação que ela faz na vida de muitas empresas, mas em principal ela transforma pessoas. Espero um dia impactar tantos e tantas assim como ela.</p>
             </div>
         </div>
     </section>
